--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-UdemyProj1-00aa6192-f9a5-4212-b344-d691fd06fbf0;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=CVC233;Initial Catalog=LeaveManagement;Persist Security Info=True; Encrypt=False;User ID=sa;Password=cybage@123456 ; MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
